<resources>
    <string name="app_name">Welcome</string>
    <string name="app_payoff">Faresa</string>
    <!-- If you want to use RTL (right to left) version, set true -->
    <string name="rtl_version" translatable="false">false</string>
    <!-- Splash screen delay (milliseconds) 1500 = 1,5 seconds -->
    <string name="splash_delay" translatable="false">1500</string>
    <!-- Google Analytics OPTIONAL -->
    <string name="analytics_property_id" translatable="false"></string>
    <!-- For use GCM you need to set your Google Api Project Number -->
    <string name="google_api_sender_id" translatable="false"></string>
    <!-- For use Google Maps you need to set your Google Maps API Key -->
    <string name="gmap_key" translatable="false"></string>
    <string name="coordinate_lat" translatable="false">40.708105</string>
    <string name="coordinate_long" translatable="false">-74.006307</string>
    <!-- ######################################### AD Mob ################################## -->
    <!-- AD Mob Publusher ID -->
    <string name="admob_interstiial_delay" translatable="false">20000</string>
    <string name="banner_ad_unit_id">ca-app-pub-1998515773839190/7283337612</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-1998515773839190/4579839573</string>
    <!-- Share text and link for Share Button -->
    <string name="share_text">Hello, look what a beautiful app that I found here: </string>
    <string name="share_link">https://www.instagram.com/faresa_pn/</string>
    <!-- ######################################### Push notifications ################################## -->
    <!-- Field to save push token on db (for push notification) do not change if you use standard push panel included -->
    <string name="db_field_token" translatable="false">user_android_token</string>
    <string name="db_field_latitude" translatable="false">user_lat</string>
    <string name="db_field_longitude" translatable="false">user_lon</string>
    <string name="db_field_appversion" translatable="false">user_app_version</string>

    <!-- Server to register.php: set the correct url of your webserver where you installed push panel, ex: http://yourdomain.com/pushpanel/register.php -->
    <string name="server_url" translatable="false">http://pushpanel.digitalborder.net/register.php</string>


    <!-- ######################################### Page Configs ################################## -->

    <!-- Type: "url" for web remote pages, "file" for local pages -->

    <string name="home_label">Home</string>
    <string name="home_type">file</string>
    <string name="home_url">home.html</string>

    <string name="about_us_label">About US</string>
    <string name="about_us_type">file</string>
    <string name="about_us_url">about_us.html</string>

    <string name="portfolio_label">Portfolio</string>
    <string name="portfolio_type">file</string>
    <string name="portfolio_url">portfolio.html</string>

    <string name="contacts_label">Contacts</string>
    <string name="contacts_type">file</string>
    <string name="contacts_url">contacts.html</string>

    <string name="second_category">Extra Features</string>
    <string name="settings_label">Settings</string>

    <string name="remote_label">WebView Remote URL</string>
    <string name="remote_type">url</string>
    <string name="remote_url">https://github.com/Faresapn</string>

    <string name="interactive_label">Interactive WebView</string>
    <string name="interactive_type">file</string>
    <string name="interactive_url">interactive.html</string>

    <string name="credits_label">Credits</string>
    <string name="credits_type">file</string>
    <string name="credits_url">credits.html</string>

    <!-- If you want, you can customize the error page! -->
    <string name="error_page">error.html</string>


    <!-- ########################################## STRINGS ######################################  -->
    <!-- String for translate -->
    <string name="share">Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">WebView Settings</string>

    <string name="pref_title_cache">Enable Cache</string>
    <string name="pref_title_javascript">Enable Javascript</string>
    <string name="pref_title_geolocation">Update GPS Coordinates</string>
    <string name="pref_title_gps_remoember">GPS Check Dialog</string>

    <string name="pref_title_webview_loader">Loader option</string>
    <string-array name="pref_webview_loader_titles">
        <item>Pull-to-Refresh</item>
        <item>Progress Dialog</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_webview_loader_values">
        <item>pull</item>
        <item>dialog</item>
        <item>never</item>
    </string-array>

    <!-- GPS -->
    <string name="gps_dialog_title">Geo-based push (optional)</string>
    <string name="gps_dialog_message">Do you want receive Geo Push notifications? If you want to try the Geo Push Panel: http://goo.gl/gsj5nO</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_header_geolocation">Geolocation</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
